--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="옐로우폼, 인터넷 서비스 개발의 혁신!">
     <meta name="author" content="Koo Lee">
+    <meta name="google-site-verification" content="8DWK37Sa6nFcUz58GuvMo2g3BxjedtbQVWWeDifOggA" />
 
     <title>옐로우폼 - 웹</title>
 
