--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">트레블로버는 여행자 보험 어플리케이션의 혁신적인 UI를 제공합니다.</h1>
+              <h1 class="mb-5">트래블로버는 여행자 보험 어플리케이션의 혁신적인 UI를 제공합니다.</h1>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">어플리케이션 개발중!</a>
             </div>
           </div>
@@ -87,7 +87,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">여행자 보험의 모든 것 트레블로버</h2>
+            <h2 class="section-heading">여행자 보험의 모든 것 트래블로버</h2>
             <p>현재 어플리케이션은 개발중입니다.</p>
             <div class="badges">
               <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
