--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="옐로우폼, 인터넷 서비스 개발의 혁신!">
+    <meta name="description" content="옐로폼, 인터넷 서비스 개발의 혁신!">
     <meta name="author" content="Koo Lee">
     <meta name="google-site-verification" content="8DWK37Sa6nFcUz58GuvMo2g3BxjedtbQVWWeDifOggA" />
 
@@ -34,7 +34,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">옐로우폼</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">옐로폼</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
