--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Koo Lee">
     <meta name="google-site-verification" content="8DWK37Sa6nFcUz58GuvMo2g3BxjedtbQVWWeDifOggA" />
 
-    <title>옐로우폼 - 웹</title>
+    <title>옐로폼</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
