네이버사이트확인

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="옐로폼, 인터넷 서비스 개발의 혁신!">
     <meta name="author" content="Koo Lee">
     <meta name="google-site-verification" content="8DWK37Sa6nFcUz58GuvMo2g3BxjedtbQVWWeDifOggA" />
+    <meta name="naver-site-verification" content="87f85d3eb48dc350dab5cdcf546a9a9b58761740"/>
 
     <title>옐로폼</title>
 
